changed the application.erb.html file to render the cart on the #side element on the shopper view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <h3>Shopping Cart</h3>
         <div id="cart">
           <%# looking for _cart.html.erb  under views/carts %>
-          <% render(@cart) %>
+          <%= render(@cart) %>
         </div>
       </div>
       <div id="main">
