--- a/app/views/shopper/show.html.erb
+++ b/app/views/shopper/show.html.erb
@@ -3,4 +3,4 @@
 <%= image_tag(@product.image) %>
 <p>$<%= "%.2f" % @product.price.round(2) %></p>
 <p><%= @product.description %></p>
-<%= button_to('Add To Cart', lineitems_path(product_id: @product.id), method: :post, class: 'add_to_cart', remote: true) %>
+<%= button_to('Add To Cart', lineitems_path(product_id: product.id), class: 'add_to_cart') %>
