--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,7 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>Name:</strong>
-    <%= user.name %>
-  </p>
-
-  <p>
-    <strong>Password:</strong>
-    <%= user.password %>
+    <strong>Username:</strong>
+    <%= user.username %>
   </p>
 
 </div>
