--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,11 @@
   flex-direction: row;
   align-items:space-between
 }
+.auth-wrapper > a{
+  padding-top:0.1rem;
+  padding-bottom:0.1rem;
+  height: fit-content;
+}
 table {
   border: 1px solid white;
 }
@@ -50,6 +55,10 @@ td {
   padding: 0.3rem;
   outline: solid;
 }
+.banner > a {
+  text-decoration: none;
+  color: white;
+}
 
 .cart {
   display:flex;
@@ -58,7 +67,7 @@ td {
 }
 
 .banner img {
-  margin: 1%;
+  margin: 1rem;
   width: 3rem;
   object-fit: contain;
 }
@@ -167,11 +176,11 @@ body {
   margin-left: 15rem;
 }
 
-.access #side, .products #side, .lineitems #side, .carts #side, .orders #side {
+.admin #side, .users #side, .access #side, .products #side, .lineitems #side, .carts #side, .orders #side {
   display:none;
 }
 
-.access #main, .products #main , .lineitems #main, .carts #main, .orders #main{
+.admin #main, .users #main, .access #main, .products #main , .lineitems #main, .carts #main, .orders #main{
   padding: 1rem;
   margin:1rem;
 }
